--- a/icub/CMakeLists.txt
+++ b/icub/CMakeLists.txt
@@ -2,18 +2,20 @@
 # Authors: Silvio Traversaro
 # CopyPolicy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT
 
-project(iDynTree_YARP CXX)
+project(iDynTree_ICUB CXX)
 
-SET(iDynTree_YARP_source src/DynTree.cpp
-                         src/yarp_kdl.cpp
-                         src/yarp_iDynTree.cpp)
+SET(iDynTree_ICUB_source
+                         src/TorqueEstimationTree.cpp
+                         src/iDyn2KDL.cpp
+                         src/idyn2kdl_icub.cpp)
 
-SET(iDynTree_YARP_header include/iCub/iDynTree/DynTree.h
-                  include/iCub/iDynTree/yarp_kdl.h
-                  include/iCub/iDynTree/yarp_iDynTree.h)
+SET(iDynTree_ICUB_header
+                  include/iCub/iDynTree/iDyn2KDL.h
+                  include/iCub/iDynTree/TorqueEstimationTree.h
+                  include/iCub/iDynTree/idyn2kdl_icub.h)
 
-SOURCE_GROUP("Source Files" FILES ${iDynTree_YARP_source})
-SOURCE_GROUP("Header Files" FILES ${iDynTree_YARP_header})
+SOURCE_GROUP("Source Files" FILES ${iDynTree_ICUB_source})
+SOURCE_GROUP("Header Files" FILES ${iDynTree_ICUB_header})
 
 # share headers with all iDynTree targes
 set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
@@ -29,15 +31,13 @@ add_install_rpath_support(BIN_DIRS "${CMAKE_INSTALL_PREFIX}/bin"
                           USE_LINK_PATH)
 
 
-message("Add library idyntree " ${LIB_TIPE}  ${iDynTree_YARP_source} ${iDynTree_YARP_header})
-add_library(idyntree-yarp ${iDynTree_YARP_source} ${iDynTree_YARP_header})
+add_library(idyntree-icub ${iDynTree_ICUB_source} ${iDynTree_ICUB_header})
 
-set_target_properties(idyntree-yarp PROPERTIES VERSION ${${VARS_PREFIX}_VERSION}
+set_target_properties(idyntree-icub PROPERTIES VERSION ${${VARS_PREFIX}_VERSION}
                                            SOVERSION ${${VARS_PREFIX}_VERSION}
-                                           PUBLIC_HEADER "${iDynTree_YARP_header}")
+                                           PUBLIC_HEADER "${iDynTree_ICUB_header}")
 
-
-target_include_directories(idyntree-yarp PUBLIC "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>"
+target_include_directories(idyntree-icub PUBLIC "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>"
                                            "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${${VARS_PREFIX}_INSTALL_INCLUDEDIR}>"
                                             ${skinDynLib_INCLUDE_DIRS}
                                             ${iDyn_INCLUDE_DIRS}
@@ -48,22 +48,27 @@ target_include_directories(idyntree-yarp PUBLIC "$<BUILD_INTERFACE:${CMAKE_SOURC
                                             ${kdl_format_io_INCLUDE_DIRS})
 
 
-target_link_libraries(idyntree-yarp LINK_PUBLIC  skinDynLib iKin iDyn
+target_link_libraries(idyntree-icub LINK_PUBLIC  skinDynLib iKin iDyn
                                             ${GSL_LIBRARIES}
                                             ${YARP_LIBRARIES}
                                             idyntree-core
                                             idyntree-sensors
                                             idyntree-modelio-urdf
                                             idyntree-regressors
+                                            idyntree-yarp
                                             ${Boost_LIBRARIES}
                                             ${TinyXML_LIBRARIES})
 
 
-install(TARGETS idyntree-yarp
+install(TARGETS idyntree-icub
         EXPORT iDynTree
         RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT bin
         LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT shlib
         ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT lib
         PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/iCub/iDynTree" COMPONENT dev)
 
-set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS idyntree-yarp)
+set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS idyntree-icub)
+
+if(IDYNTREE_COMPILE_TESTS)
+    add_subdirectory(tests)
+endif(IDYNTREE_COMPILE_TESTS)
