[cmake][model_io] fix headers inclusion

--- a/model_io/urdf/CMakeLists.txt
+++ b/model_io/urdf/CMakeLists.txt
@@ -22,10 +22,6 @@ if(MSVC)
     set(CMAKE_DEBUG_POSTFIX "d")
 endif(MSVC)
 
-
-#local headers
-include_directories(include/kdl_format_io)
-
 set(IDYNTREE_MODELIO_URDF_HEADERS include/kdl_format_io/urdf_compatibility.h
                                   include/kdl_format_io/urdf_export.hpp
                                   include/kdl_format_io/urdf_import.hpp
@@ -39,13 +35,12 @@ set(IDYNTREE_MODELIO_URDF_SOURCES src/urdf_export.cpp
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_MODELIO_URDF_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_MODELIO_URDF_HEADERS})
 
-get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
-
-message(STATUS "IDYNTREE_TREE_INCLUDE_DIRS : ${IDYNTREE_TREE_INCLUDE_DIRS}")
-include_directories(SYSTEM ${IDYNTREE_TREE_INCLUDE_DIRS})
-
 # share headers with all iDynTree targes
 set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
+get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
+
+include_directories(${IDYNTREE_TREE_INCLUDE_DIRS})
+include_directories(include/kdl_format_io)
 
 set(libraryname idyntree-modelio-urdf)
 
