Several improvement related to model & bindings * Preliminary (untested) URDF loader not dependent on urdfdom * Removed all warnings from swig generation * Implemented revolute joint and fixed joint

--- a/model/CMakeLists.txt
+++ b/model/CMakeLists.txt
@@ -10,7 +10,10 @@ set(IDYNTREE_MODEL_HEADERS include/iDynTree/Model/FixedJoint.h
                            include/iDynTree/Model/Indeces.h
                            include/iDynTree/Model/Link.h
                            include/iDynTree/Model/LinkState.h
-                           include/iDynTree/Model/MovableJointImpl.h)
+                           include/iDynTree/Model/Model.h
+                           include/iDynTree/Model/MovableJointImpl.h
+                           include/iDynTree/Model/RevoluteJoint.h
+                           include/iDynTree/Model/Traversal.h)
 
 set(IDYNTREE_MODEL_PRIVATE_INCLUDES)
 
@@ -18,7 +21,10 @@ set(IDYNTREE_MODEL_SOURCES src/FixedJoint.cpp
                            src/Indeces.cpp
                            src/Link.cpp
                            src/LinkState.cpp
-                           src/ModelInterfaceDestructors.cpp)
+                           src/Model.cpp
+                           src/ModelInterfaceDestructors.cpp
+                           src/RevoluteJoint.cpp
+                           src/Traversal.cpp)
 
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_MODEL_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_MODEL_HEADERS})
