fix bug in DynamicsComputations

--- a/high-level/CMakeLists.txt
+++ b/high-level/CMakeLists.txt
@@ -48,5 +48,5 @@ install(TARGETS ${libraryname}
 set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS ${libraryname})
 
 if(IDYNTREE_COMPILE_TESTS)
-    #add_subdirectory(tests)
+    add_subdirectory(tests)
 endif(IDYNTREE_COMPILE_TESTS)
