--- a/high-level/tests/CMakeLists.txt
+++ b/high-level/tests/CMakeLists.txt
@@ -9,5 +9,8 @@ macro(add_unit_test_hl classname)
     add_test(NAME ${testname} COMMAND ${testbinary})
 endmacro()
 
+# Copy the tests URDF also in this directory
+set_property(GLOBAL APPEND PROPERTY IDYNTREE_BINARY_TEST_DIRS "${CMAKE_CURRENT_BINARY_DIR}")
+
 # todo
 #add_unit_test_hl(DynamicsComputations)
