--- a/icub/tests/CMakeLists.txt
+++ b/icub/tests/CMakeLists.txt
@@ -9,15 +9,10 @@ include_directories(${CMAKE_SOURCE_DIR}/include
                           ${kdl_codyco_INCLUDE_DIRS}
                           ${ICUB_INCLUDE_DIRS})
 
+# Copy the tests URDF also in this directory
+set_property(GLOBAL APPEND PROPERTY IDYNTREE_BINARY_TEST_DIRS "${CMAKE_CURRENT_BINARY_DIR}")
 
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/test_files/icub.urdf
-               ${CMAKE_CURRENT_BINARY_DIR}/icub.urdf)
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/test_files/bigman.urdf
-               ${CMAKE_CURRENT_BINARY_DIR}/bigman.urdf)
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/test_files/icub_model.urdf
-               ${CMAKE_CURRENT_BINARY_DIR}/icub_model.urdf)
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/test_files/icub_skin_frames.urdf
-               ${CMAKE_CURRENT_BINARY_DIR}/icub_skin_frames.urdf)
+
 add_executable(iDynTreeJacobianTest         iDynTreeJacobianTest.cpp)
 add_executable(iDynTreeRelativeJacobianTest iDynTreeRelativeJacobianTest.cpp)
 add_executable(iDynTreeWholeBodyFTsensorEstimateTest iDynTreeWholeBodyFTsensorEstimateTest.cpp)
