--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,11 +1,13 @@
 
 
+# Copy the tests URDF also in this directory
+set_property(GLOBAL APPEND PROPERTY IDYNTREE_BINARY_TEST_DIRS "${CMAKE_CURRENT_BINARY_DIR}")
 
 
 get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
 
 include_directories(${IDYNTREE_TREE_INCLUDE_DIRS})
-include_directories(SYSTEM ${EIGEN3_INCLUDE_DIR} ${orocos_kdl_INCLUDE_DIRS} ${orocos_kdl_INCLUDE_DIRS})
+include_directories(SYSTEM ${EIGEN3_INCLUDE_DIR} ${orocos_kdl_INCLUDE_DIRS} ${orocos_kdl_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS})
 
 add_executable(inverse_inertia_test inverse_inertia.cpp)
 add_executable(regressor_utils_test regressor_utils_test.cpp)
@@ -14,6 +16,7 @@ add_executable(inversedynamics_regressor_test inversedynamics_regressor_test.cpp
 add_executable(inversedynamics_crba_test inversedynamics_crba_test.cpp testhumanoid.cpp testsinglelink.cpp testsinglejoint.cpp testkukalwr.cpp)
 add_executable(comjacobian_test comjacobian_test.cpp testhumanoid.cpp)
 add_executable(inversedynamics_different_loops_test inversedynamics_different_loops_test.cpp testhumanoid.cpp)
+add_executable(DynamicsComputationsConsistencyTest DynamicsComputationsConsistencyTest.cpp)
 
 #set_source_files_properties(sparse_numerical_subspace_test.cpp PROPERTIES COMPILE_FLAGS -std=c++11)
 #add_executable(sparse_numerical_subspace_test sparse_numerical_subspace_test.cpp testhumanoid.cpp testdoublejoint.cpp testsinglelink.cpp testsinglejoint.cpp testkukalwr.cpp)
@@ -27,7 +30,7 @@ target_link_libraries(comjacobian_test                      idyntree-core idyntr
 target_link_libraries(inversedynamics_different_loops_test  idyntree-core idyntree-regressors idyntree-modelio-urdf  ${orocos_kdl_LIBRARIES} )
 #target_link_libraries(sparse_numerical_subspace_test ${orocos_kdl_LIBRARIES} idyntree-core  )
 target_link_libraries(inversedynamics_different_loops_test  idyntree-core idyntree-regressors idyntree-modelio-urdf ${YARP_LIBRARIES} iKin ${orocos_kdl_LIBRARIES} )
-
+target_link_libraries(DynamicsComputationsConsistencyTest   idyntree-core idyntree-regressors idyntree-modelio-urdf idyntree-high-level idyntree-yarp ${YARP_LIBRARIES}  ${orocos_kdl_LIBRARIES})
 
 add_test(NAME test_inverse_inertia    COMMAND inverse_inertia_test)
 add_test(NAME test_regressor_utils    COMMAND regressor_utils_test)
@@ -37,6 +40,7 @@ add_test(NAME test_inversedynamics_crba COMMAND inversedynamics_crba_test)
 add_test(NAME test_comjacobian COMMAND comjacobian_test)
 #add_test(test_sparse_numerical_subspace sparse_numerical_subspace_test)
 add_test(NAME test_inversedynamics_different_loops COMMAND inversedynamics_different_loops_test)
+add_test(NAME TestDynamicsComputationsConsistency  COMMAND DynamicsComputationsConsistencyTest)
 
 if(IDYNTREE_USES_ICUB_MAIN)
   find_package(YARP)
