--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,9 @@ version: 1.0.{build}
 
 clone_folder: c:\projects\idyntree
 
+environment:
+  Eigen3_DIR:          c:/Program Files (x86)/Eigen
+
 install:
 
 build:
