added SpatialAcc unit test

--- a/core-experimental/tests/CMakeLists.txt
+++ b/core-experimental/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ endmacro()
 add_unit_test(Axis)
 add_unit_test(Direction)
 add_unit_test(PrivateUtils)
+add_unit_test(SpatialAcc)
 add_unit_test(SpatialInertia)
 add_unit_test(Twist)
 add_unit_test(Wrench)
