--- a/bindings/matlab/tests/CMakeLists.txt
+++ b/bindings/matlab/tests/CMakeLists.txt
@@ -10,4 +10,4 @@ add_custom_command(TARGET copy_matlab_swigref_in_build PRE_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy
                    ${CMAKE_SOURCE_DIR}/../SwigRef.m ${CMAKE_BINARY_DIR}/SwigRef.m)
 
-add_test(NAME matlab_idyntree_tests COMMAND ${Matlab_MAIN_PROGRAM} -nodisplay -r "runiDynTreeTests")
+add_test(NAME matlab_idyntree_tests COMMAND ${Matlab_MAIN_PROGRAM} -nodisplay -nodesktop -nojvm -r "runiDynTreeTests")
